Fixing color diff for dark mode backgrounds.

--- a/assets/css/theme-switcher.scss
+++ b/assets/css/theme-switcher.scss
@@ -20,7 +20,7 @@ $themes: (
     $faded-nav-color: hsl(207, 80%, 58%)
   ),
   $dark-theme: (
-    $general-background: hsl(208, 36%, 4%),
+    $general-background: hsl(208, 36%, 11%),
     $accent-background: 	hsl(208, 46%, 3%),
     $accent-color:	hsl(14, 89%, 61%),
     $faded-accent-color:	hsl(14, 71%, 61%),
